# Kavosh

./: .gitignore  .gitmodules  CMakeLists.txt  Kavosh  Kavosh.Err  README.md
Snap-2.4/: .gitignore
Snap-2.4/examples/agmfit/: agmfitmain
Snap-2.4/examples/agmgen/: agmgen
Snap-2.4/examples/bigclam/: bigclam
Snap-2.4/examples/cascades/: cascades
Snap-2.4/examples/centrality/: centrality
Snap-2.4/examples/cesna/: cesna
include/: GetTimeMs64.hpp  GraphData.hpp
nauty25r9/: NRswitchg  addedgeg  amtog  biplabg  catg  complg  config.status  copyg  deledgeg  directg  dreadnaut  dreadtest  dreadtest1  dreadtest4K  dreadtestS  dreadtestS1  dreadtestW  dreadtestW1  dretog  genbg  geng  genrang  gentourng  labelg  linegraphg  listg  multig  naucompare  newedgeg  pickg  planarg  ranlabg  shortg  showg  subdivideg  watercluster2
nauty26r7/: NRswitchg  addedgeg  amtog  biplabg  catg  complg  config.status  converseg  copyg  countg  cubhamg  deledgeg  delptg  directg  dreadnaut  dretodot  dretog  genbg  genbgL  geng  genquarticg  genrang  genspecialg  gentourng  gentreeg  hamheuristic  labelg  linegraphg  listg  multig  newedgeg  planarg  ranlabg  shortg  showg  subdivideg  twohamg  vcolg  watercluster2
networks/: 4cycle-lattice.txt  Gnutella31.txt  Untitled.txt  badlist.csv  concatm.csv  concatm.txt  connected-lattices.txt  csv2edgelist.py  csv2edgelist.py~  cyclic_diamonds.txt~  ecoli.csv  ecoli.txt  ecoli2.txt  ecoli2.txt.OUT  ecoli3.txt  goodlist.txt  matematicos.csv  matematicos.txt  maths.txt  meta6.txt  meta6.txt~  micro.txt  micro_meta.csv  micro_meta.txt  recurrent-triangles.txt  recurrent-triangles.txt~  test.txt  untitled.csv  youtube.txt
src/: GetTimeMs64.cpp  GraphData.cpp  GraphData.tpp  TODO  concatenated_motifs.txt  main  main.Err  main.cpp  mainICPC-O2  mainICPC-O3
tests/: test  test.Err  test.cpp  test.cpp~
(+23 files in other folders)
